<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FragmentLearn</string>
    <string name="action_add">New Message</string>
    <string name="new_message">NEW MESSAGE</string>
    <string name="action_settings">Settings</string>
    <string name="hint_editTxt_message">Enter Message</string>
    <string name="hint_editTxt_Title">Enter Title</string>
    <string name="btnSubmit">SUBMIT</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="btnAddPhoto">Add Photo</string>

</resources>
